--- a/projetos/templates/projetos/mostra_feedback.html
+++ b/projetos/templates/projetos/mostra_feedback.html
@@ -23,7 +23,7 @@
 
   Nome: {{feedback.nome}}<br>
   e-mail: {{feedback.email}}<br>
-  Empresa: {{feedback.empresa}}<br>
+  Organizacao: {{feedback.empresa}}<br>
 
   <br>
   <p>O projeto avançou conforme o esperado? Se SIM, você sabe qual foi a fórmula do sucesso?
