--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -45,7 +45,7 @@
               {% if not proposta.disponivel%}X{% endif %}
               {{ forloop.counter }}&ordm; :
               {{proposta.titulo}}
-              ({{ proposta.organizacao.nome_empresa }})"></li>
+              ({{ proposta.organizacao2.nome }})"></li>
             </a>
             <li class="past" title="">
               <span class="bar" data-number="{{opcoes}}"></span>
