--- a/projetos/templates/projetos/minhas_bancas.html
+++ b/projetos/templates/projetos/minhas_bancas.html
@@ -40,9 +40,9 @@
               {% endif %}
           {% endif %}
           <br>
-          {% if banca.projeto.empresa.nome_empresa %}
+          {% if banca.projeto.organizacao %}
             <b>Organização Parceira:</b> 
-              {{ banca.projeto.empresa.nome_empresa }}
+              {{ banca.projeto.organizacao.nome }}
           {% endif %}
           <br>
           {% if banca.location %}
