--- a/projetos/templates/projetos/organizacoes_tabela.html
+++ b/projetos/templates/projetos/organizacoes_tabela.html
@@ -28,8 +28,8 @@
       {% for organizacao,projetos in organizacoes %} 
         <tr class="item">
           <td>
-            <a href="{% url 'organizacao_completo' organizacao.login %}">
-              {{organizacao.nome_empresa}}
+            <a href="{% url 'organizacao_completo' organizacao.id %}">
+              {{organizacao.nome}}
             </a>
           </td>
           <td style="text-align: center;" data-toggle="tooltip" data-html="true" animation="true" title="
