--- a/projetos/templates/projetos/professores_tabela.html
+++ b/projetos/templates/projetos/professores_tabela.html
@@ -36,7 +36,7 @@
           {% for grupo in grupos %}
             &bull;
             {{grupo.get_titulo}}
-            [{{grupo.empresa}}]
+            [{{grupo.organizacao}}]
             <br>
           {% endfor %}
         "> 
