--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -70,16 +70,16 @@
   {% endif %}
   <hr>
 
-  <h3>Organização Parceira: <a href="{% url 'organizacao_completo' projeto.empresa.login %}">{{ projeto.empresa.nome_empresa }}</a></h3>
-  <p><strong>endereço:</strong> <a class="tabulado" href="http://maps.google.com/maps?q={{projeto.empresa.endereco}}">{{ projeto.empresa.endereco|linebreaks }}</a></p>
-  {% if projeto.empresa.website %}
-    <p><strong>website:</strong>  <a class="tabulado" href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a></p>
+  <h3>Organização Parceira: <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a></h3>
+  <p><strong>endereço:</strong> <a class="tabulado" href="http://maps.google.com/maps?q={{projeto.organizacao.endereco}}">{{ projeto.organizacao.endereco|linebreaks }}</a></p>
+  {% if projeto.organizacao.website %}
+    <p><strong>website:</strong>  <a class="tabulado" href="{{ projeto.organizacao.website }}"> {{ projeto.organizacao.website }} </a></p>
   {% endif %} 
-  {% if projeto.empresa.informacoes %}
-    <strong>Informações sobre a empresa :</strong> {{ projeto.empresa.informacoes|linebreaks }}
+  {% if projeto.organizacao.informacoes %}
+    <strong>Informações sobre a organização :</strong> {{ projeto.organizacao.informacoes|linebreaks }}
   {% endif %}
   {% if projeto.proposta.departamento %}
-    <strong>Informações sobre o departamento na empresa :</strong> {{ projeto.proposta.departamento|linebreaks }}
+    <strong>Informações sobre o departamento na organização :</strong> {{ projeto.proposta.departamento|linebreaks }}
   {% endif %}
   {% if conexoes %}
   <strong>conexões:</strong><br>
