--- a/projetos/templates/projetos/propor.html
+++ b/projetos/templates/projetos/propor.html
@@ -19,7 +19,7 @@
         {% if projeto.disponivel %}
           <a href="{% url 'projeto_completo' projeto.id %}" class="dark-blue-bold">
             {% if projeto.titulo_final %}{{projeto.titulo_final}}{% else %}{{projeto.titulo}}{% endif %}
-            ({{ projeto.empresa.nome_empresa }})
+            ({{ projeto.organizacao.nome }})
             &nbsp;&nbsp;
             |
             {% if projeto.perfil_aluno1_computacao %}C{% endif %}{% if projeto.perfil_aluno1_mecatronica %}X{% endif %}{% if projeto.perfil_aluno1_mecanica %}M{% endif %}
