--- a/projetos/templates/projetos/mapeamento_estudante_projeto.html
+++ b/projetos/templates/projetos/mapeamento_estudante_projeto.html
@@ -80,8 +80,8 @@
           class="rotate">
             <div>
               <span>
-                {% if proposta.organizacao2 %}
-                  {{proposta.organizacao2.sigla}}
+                {% if proposta.organizacao %}
+                  {{proposta.organizacao.sigla}}
                 {% else %}
                   {{proposta.nome_organizacao}}
                 {% endif %}
