--- a/users/templates/users/alunos_inscritos.html
+++ b/users/templates/users/alunos_inscritos.html
@@ -50,7 +50,7 @@
                       <u>
                     {% endif %}
                         {{opcao.proposta.titulo}}
-                      ({{opcao.proposta.organizacao2.nome}})
+                      ({{opcao.proposta.organizacao.nome}})
                     {% if alocacoes.count and opcao.proposta == alocacoes.last.projeto.proposta %}
                       </u>
                     {% endif %}
