--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -12,9 +12,13 @@
     <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 
     <hr>
+
+    <a href="{% url 'cadastrar_organizacao' %}"><h5>Cadastrar Organização</h5></a>
+
+    <hr>
     <a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
     <a href="{% url 'relatorios' %}"><h5>Relatórios</h5></a>
-    <a href="{% url 'propor' %}">            <h5>Propor Grupos para Projetos</h5>         </a>
+    <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
     <a href="{% url 'carregar' %}"><h5>Carregar dados (CUIDADO PODE COMPROMETER BASE DE DADOS)</h5></a>
 
 {% endblock %}
