--- a/projetos/templates/projetos/cadastra_organizacao.html
+++ b/projetos/templates/projetos/cadastra_organizacao.html
@@ -26,80 +26,39 @@
   <form action="" method="post"> {% csrf_token %}  
 
     {% comment %}
+      {% if edicao %}
+        <input type="submit" value="Atualizar Dados da Organização">
+      {% else %}
+      {% endif %}
+    {% endcomment %}
+  
+    <label for="organizacao">Nome da Organização<br></label><br>
+    <textarea id="nome" name="nome" rows="1" cols="80" maxlength="100" required>{{nome}}</textarea>
+    <br><br>
 
-    nome
-    sigla
-    endereco
-    website
-    informacoes
-    logotipo 
-    cnpj 
-    inscricao_estadual 
-    razao_social 
-    ramo_atividade 
-    
-    <label for="nome">Nome:</label><input type="text" size="75" id="nome" name="nome" value="{{full_name}}" required><br><br>
-    <label for="email">e-mail:</label><input type="email" size="75" id="email" name="email" value="{{email}}" required><br><br>
+    <label for="sigla">Sigla:</label><input type="text" size="73" id="sigla" name="sigla" value="{{sigla}}" required><br><br>
 
-    <label for="organizacao">Nome da Instituição/Empresa<br>
-    <small>sigla e nome comercial/fantasia se houver (aqui não é necessário indicar a Razão Social)</small>
-    </label><br>
-    <textarea id="organizacao" name="organizacao" rows="1" cols="80" maxlength="100" required>{{ organizacao }}</textarea>
+    <label for="endereco">Endereço<br></label><br>
+    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="1000" required>{{endereco}}</textarea>
     <br><br>
 
     <label for="website">website:</label><input type="text" size="73" id="website" name="website" value="{{website}}" placeholder="https://www.insper.edu.br" required><br><br>
 
-    <label for="endereco">Endereço<br>
-    <small>onde os alunos deverão ir para desenvolver o projeto</small>
-    </label><br>
-    <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="1000" required>{{endereco}}</textarea>
+    <label for="informacoes">Informações sobre a instituição/empresa</label><br>
+    <textarea id="informacoes" name="informacoes" rows="4" cols="80" maxlength="1000">{{informacoes}}</textarea>
     <br><br>
 
-    <label for="contatos_tecnicos">Contatos Técnicos<br>  
-    <small>nome/e-mail/telefone de quem os alunos e professores orientadores irão tratar do desenvolvimento do projeto</small>
-    </label><br>
-    <textarea id="contatos_tecnicos" name="contatos_tecnicos" rows="4" cols="80" maxlength="1000" required>{{contatos_tecnicos}}</textarea>
-    <br><br>
+    !!!  logotipo  !!!<br>
 
-    <label for="contatos_adm">Contatos Administrativos<br>     
-    <small>nome/e-mail/telefone, com quem devemos resolver questões contratuais e RH</small>
-    </label><br>
-    <textarea id="contatos_adm" name="contatos_adm" rows="4" cols="80" maxlength="1000" required>{{contatos_adm}}</textarea>
-    <br><br>
-
-    <label for="descricao_organizacao">Informações sobre a instituição/empresa<br>
-    <small>descreva a instituição/empresa para os alunos entenderem o que ela faz (opcional)</small>
-    </label><br>
-    <textarea id="descricao_organizacao" name="descricao_organizacao" rows="4" cols="80" maxlength="1000">{{descricao_organizacao}}</textarea>
-    <br><br>
-
-    <label for="info_departamento">Informações sobre a departamento<br>
-    <small>descreva o departamento/área para os alunos entenderem o que ele faz (opcional)</small>
-    </label><br>
-    <textarea id="info_departamento" name="info_departamento" rows="4" cols="80" maxlength="1000">{{info_departamento}}</textarea>
     <br>
-    <hr>
+    cnpj <br>
+    inscricao_estadual <br>
+    razao_social <br>
+    ramo_atividade <br>
+    <br>
 
-    <label for="titulo">Título provisório do projeto<br>
-    <small>um título para ser apresentado aos alunos</small>
-    </label><br>
-    <input type="text" size="80" id="titulo" name="titulo" value="{{titulo}}" required>
-    <br><br>
+    <input type="submit" value="Cadastrar Organização Parceira">
 
-    <label for="desc_projeto">Descrição do Projeto<br>
-    <small>para discussão entre professores e que será passada para os alunos</small>
-    </label><br>
-    <textarea id="desc_projeto" name="desc_projeto" rows="4" cols="80" maxlength="1000" required>{{desc_projeto}}</textarea>
-    <br><br>
-
-    {% if edicao %}
-      <input type="submit" value="Atualizar Dados da Organização">
-    {% else %}
-      <input type="submit" value="Cadastrar Organização Parceira">
-    {% endif %}
-
-    {% endcomment %}
-  
   </form>
 
   <p>&nbsp;</p>
