Cadastramento de alunos

--- a/projetos/templates/index_admin.html
+++ b/projetos/templates/index_admin.html
@@ -12,8 +12,8 @@
     <a href="{% url 'servico' %}"><h5>Habilitar aviso se manutenção</h5></a>
 
     <hr>
-
     <a href="{% url 'cadastrar_organizacao' %}"><h5>Cadastrar Organização</h5></a>
+    <a href="{% url 'cadastrar_usuario' %}"><h5>Cadastrar Usuário</h5></a>
 
     <hr>
     <a href="{% url 'exportar' %}"><h5>Exportar dados</h5></a>
