--- a/projetos/templates/generic.html
+++ b/projetos/templates/generic.html
@@ -9,7 +9,20 @@
 
 {% block content %}
     {{mensagem|safe}}
+ 
     <br>
+    {% if voltar %}
+        <a href='javascript:history.back(1)'>Voltar</a><br><br>
+    {% endif %} 
+
+    {% if cadastrar_organizacao %}
+        <a href="{% url 'cadastrar_organizacao' %}">Cadastrar outra organização</a><br>
+    {% endif %}
+
+    {% if cadastrar_usuario %}
+        <a href="{% url 'cadastrar_usuario' %}">Cadastrar outro usuário</a><br>
+    {% endif %}
+
     {% if area_aluno %}
         <a href="{% url 'index_aluno' %}">Voltar para Área do Aluno</a><br>
     {% endif %}
@@ -25,6 +38,7 @@
     {% if organizacoes_lista %}
         <a href="{% url 'organizacoes_lista' %}">Volta para lista de organizações</a><br>
     {% endif %}
+
 
     {% if area_principal %}
         <a href="{% url 'index' %}">Voltar para Página Principal!</a><br>
