--- a/projetos/templates/projetos/proposta_submissao.html
+++ b/projetos/templates/projetos/proposta_submissao.html
@@ -33,8 +33,8 @@
   <form action="" method="post"> {% csrf_token %}  
 
     <label for="nome">Nome:</label><input type="text" size="75" id="nome" name="nome" value="{{full_name}}" required><br><br>
-    <label for="email">e-mail:</label><input type="email" size="75" id="email" name="email" value="{{email}}" required><br><br>
-
+    <label for="email">e-mail:</label><input type="text" size="75" id="email" name="email" value="{{email}}" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25}([ ]*[;,][ ]*([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5}){1,25})*$" required><br><br>
+    
     <label for="organizacao">Nome da Instituição/Empresa<br>
     <small>sigla e nome comercial/fantasia se houver (aqui não é necessário indicar a Razão Social)</small>
     </label><br>
