--- a/projetos/templates/projetos/organizacao_completo.html
+++ b/projetos/templates/projetos/organizacao_completo.html
@@ -135,22 +135,36 @@
         </a></li>
     {% endfor %}
   {% endif %}
-  
-  {% if organizacao.projeto_set.all %}
+
+  {% if organizacao.proposta_set.all %}
     <hr>
-    <h3>Projetos</h3>
-    {% for projeto in organizacao.projeto_set.all %}
-      <a href="{% url 'projeto_completo' projeto.id %}"> 
+    <h3>Propostas</h3>
+    {% for proposta in organizacao.proposta_set.all %}
+      <a href="{% url 'proposta_completa' proposta.id %}"> 
         <li>
-          {% if projeto.alocacao_set.count %}
+          {% if proposta.fechada %}
             <u>
           {% endif %}
-          {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
-          {% if projeto.alocacao_set.count %}
+          {{proposta.titulo}} ({{proposta.ano}}.{{proposta.semestre}})
+          {% if proposta.fechada %}
             </u>
           {% endif %}
         </li>
       </a>
+    {% endfor %}
+  {% endif %}
+
+  {% if organizacao.projeto_set.all %}
+    <hr>
+    <h3>Projetos</h3>
+    {% for projeto in organizacao.projeto_set.all %}
+      {% if projeto.alocacao_set.count %}
+        <a href="{% url 'projeto_completo' projeto.id %}"> 
+          <li>
+            {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
+          </li>
+        </a>
+      {% endif %}
     {% endfor %}
   {% endif %}
   
