--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -23,7 +23,7 @@
 
     <h5>Proposta de Projetos</h5>
     <ul>
-        {% comment %}<a href="{% url 'projetos_lista' 'disponiveis' %}"><li>Propostas Apresentadas (OLD)</li></a>{% endcomment %}
+        <a href="{% url 'organizacoes_prospectadas' %}"><li>Organizações Prospectadas</li></a>
         <a href="{% url 'propostas_lista' 'disponiveis' %}"><li>Propostas Apresentadas</li></a>
         <a href="{% url 'histograma' %}"><li>Procura (histograma de preferências)</li></a>        
     </ul>
