--- a/projetos/templates/generic.html
+++ b/projetos/templates/generic.html
@@ -24,20 +24,25 @@
     {% endif %}
 
     {% if area_aluno %}
-        <a href="{% url 'index_aluno' %}">Voltar para Área do Aluno</a><br>
+        <a href="{% url 'index_aluno' %}">Ir para Área do Aluno</a><br>
     {% endif %}
 
     {% if bancas_index %}
-        <a href="{% url 'bancas_index' %}">Volta para índice das bancas</a><br>
+        <a href="{% url 'bancas_index' %}">Ir para índice das bancas</a><br>
     {% endif %}
 
     {% if organizacao_completo %}
-        <a href="{% url 'organizacao_completo' organizacao_completo %}">Volta para organização</a><br>
+        <a href="{% url 'organizacao_completo' organizacao_completo %}">Ir para organização</a><br>
     {% endif %}
 
     {% if organizacoes_lista %}
-        <a href="{% url 'organizacoes_lista' %}">Volta para lista de organizações</a><br>
+        <a href="{% url 'organizacoes_lista' %}">Lista de todas as organizações</a><br>
     {% endif %}
+
+    {% if organizacoes_prospectadas %}
+        <a href="{% url 'organizacoes_prospectadas' %}">Lista de organizações prospectadas</a><br>
+    {% endif %}
+
 
 
     {% if area_principal %}
